--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./app/app"
+    "start": "nodemon ./app/app"
   },
   "author": "",
   "license": "ISC",
