--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.13.4",
+    "koa-body": "^4.2.0",
     "koa-bodyparser": "^4.3.0",
     "koa-route": "^3.2.0",
     "koa-router": "^10.1.1",
